# rambo

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .readthedocs.yml.bk  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  RULES.md  Vagrantfile  bitbucket-pipelines.yml  build_lastpass.sh  click_configfile.py  diff  install_ambari.sh  install_lastpass_deps.sh  pyproject.toml  setup.cfg  setup.py  setup.sh  version.txt
.circleci/: builds.sh  config.yml  core_deps.sh  create_conda_env.sh  create_venv.sh  create_venv_env.sh  deps.sh  install_miniconda.sh  install_venv.sh  miniconda_pip_install.sh  miniconda_test.sh  pip_install.sh  test.sh  venv_pip_install.sh  venv_test.sh
.github/: pull_request_template.md
.gitlabci/: download_python_environment_manager.sh  mock_vagrant.sh
auth/env_scripts/: digitalocean.env.sh.dist
dependencies/: apt.txt
docs/: INSTALL.md  Makefile  README.md  api.md  cli.md  conf.md  conf.py  index.md  index.rst  quickstart.md
docs/_static/: custom.css
docs/_templates/: layout.html
docs/core/: api.md  cli.md  conf.md  customizing.md  env_vars.md  provisioning.md  quickstart.md
docs/providers/: aws-ec2.md  digitalocean.md  docker.md  (+1 more)
rambo/: Vagrantfile  __init__.py  __main__.py  __version__.py  _version.py  app.py  cli.py  core.py  options.py  providers.py  pure_ops.py  routing.py  salt_cloud_shims.py  scripts.py  settings.json  settings.py  setup.sh  utils.py  vagrant_ops.py  vagrant_providers.py
salt_only_experiments/: test_do.py
vagrant_resources/: modules.rb
(+230 files in other folders)
